welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: '(' expected but identifier found.
    if couleur==Color.green {
       ^SlugTracking:14: error: illegal start of simple expression
  }
  ^