welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var couleur=gris
  if (estFaceMur==false) {
    avance;
    getCouleurSol;
    couleur=getCouleurSol
    recule;
    if couleur==Color.green {
      return true
    } else {
      return false
    }
  }
}